# chatot

./: Cargo.toml  README.md  charmap.json
.github/workflows/: main.yml  release.yml
src/: charmap.rs  decode.rs  encode.rs  lib.rs  main.rs
