[package]
name = "chatot"
version = "0.1.0"
edition = "2024"
description = "A text archive decoder and encoder for the generation IV Pokémon games"

[dependencies]
byteorder = "1.5.0"
clap = { version="4.5.53", features= ["derive"] }
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
rayon = "1.10"
